# xbattleai

./: .#Makefile.in.1.10  .#extern.h.1.9  .#init.c.1.5  .#parse.c.1.8  .gitignore  CHANGES  CONTRIBUTORS  INSTALL  Makefile  Makefile.in  README  README.AI  README.md  TODO  VERSION  ai.c  ai.h  ai1.c  ai1.h  ai1_if.h  ai2.c  ai2.h  ai2_if.h  command.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  constant.h  draw.c  edit.c  edit.h  error.c  extern.h  file.c  file.h  gauntletCampaign.in  init.c  (+30 more)
desktop/: xbattleAI.desktop
gauntlet/: Gauntlet-UNUSED.xbo  gauntlet.xbo  gauntlet.xbo.~1.1.~  gauntlet_interp.awk
gauntlet/gauntlet_levels/: level1  level1.1  level1.2  level2  level2.2  level3  level4  level4.1  level4.2  level4.3  level5
images/: xbattle.xpm
images/.xvpics/: icon.xpm
xbcs/: foo.xbc  foo.xbc~
xbos/: atlas_scm.xbo  default_scm.xbo  desert_scen.xbo  desert_scm.xbo  io_scen.xbo  io_scm.xbo  jungle_gp_scen.xbo  jungle_scen.xbo  mountains_scen.xbo  polar_scen.xbo  skirmish_scm.xbo  space_scm.xbo  tribal_scm.xbo  tropical2_scm.xbo  tropical_scm.xbo  tundra_scm.xbo
xbts/: foo1.xbt  foo2.xbt
