dnl Process this file with autoconf to produce a configure script.
AC_INIT(shape.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for programs.
AC_PROG_CPP

dnl Checks for systems.
AC_AIX
AC_ISC_POSIX
AC_MINIX

# Checks for compiler quirks.
AC_PROG_GCC_TRADITIONAL
AC_C_CONST

dnl Check if libraries are required.
AC_PATH_X
AC_PATH_XTRA
CFLAGS="${CFLAGS} ${X_CFLAGS}"
LIBS="${X_LIBS} ${LIBS}"
AC_CHECK_LIB(m, pow)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(resolv, inet_aton)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(X11, XOpenDisplay)
AC_CHECK_LIB(pt,ptsname)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(sys/types.h sys/select.h string.h strings.h memory.h unistd.h malloc.h sys/socket.h netinet/in.h sys/param.h netdb.h time.h sys/time.h pthread.h setjmp.h malloc.h fcntl.h sys/stat.h linux/soundcard.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM
AC_TYPE_SIZE_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday select socket strdup strstr strtol strchr memcpy getenv pow exp gethostbyname pthread_create getpid)

dnl Check for configuration options
ENABLES=""
AC_ARG_ENABLE(hills-and-forest,
              [  --enable-hills-and-forest allow hills and forests on the same map (default is YES)],
              [if test X"${enableval}" = X"yes"; then ENABLES="${ENABLES} -DWITH_HILLS_AND_FOREST"; fi],
              [ENABLES="${ENABLES} -DWITH_HILLS_AND_FOREST"] )

AC_ARG_ENABLE(base-side,
              [  --enable-base-side      allow side-owned towns or bases (default is YES)],
              [if test X"${enableval}" = X"yes"; then ENABLES="${ENABLES} -DWITH_BASE_SIDE"; fi],
              [ENABLES="${ENABLES} -DWITH_BASE_SIDE"] )

AC_ARG_ENABLE(ai2-learning,
              [  --enable-ai2-learning   enable learning in the second AI algorithm (default is YES)],
              [if test X"${enableval}" = X"yes"; then ENABLES="${ENABLES} -DWITH_AI2_LEARNING"; fi],
              [ENABLES="${ENABLES} -DWITH_AI2_LEARNING"] )

AC_ARG_ENABLE(sound,
              [  --enable-sound          OSS sound support for linux. (default is YES)],
              [if test X"${enableval}" = X"yes"; then ENABLES="${ENABLES} -DWITH_SOUND"; fi],
              [ENABLES="${ENABLES} -DWITH_SOUND"] )

AC_SUBST(ENABLES)

dnl Done. Just output config.h and the Makefile..
AC_OUTPUT(Makefile)
